started bibliography and added in-text citation to notebook 1 in foundations

--- a/_toc.yml
+++ b/_toc.yml
@@ -17,3 +17,6 @@ parts:
       - file: notebooks/simplified-calc/climkern-calc
       - file: notebooks/simplified-calc/kernel-comparison
       - file: notebooks/simplified-calc/state-dependence
+  - caption: Appendix
+    chapters:
+      - file: references
