--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,16 @@ parse:
     - replacements
     - smartquotes
     - substitution
+    
+bibtex_bibfiles:
+    - bibliography.bib
 
 sphinx:
   config:
     linkcheck_ignore: ["https://doi.org/*", "https://zenodo.org/badge/*"] # don't run link checker on DOI links since they are immutable
     nb_execution_raise_on_error: true # raise exception in build if there are notebook errors (this flag is ignored if building on binder)
     html_favicon: notebooks/images/icons/favicon.ico
+    bibtex_reference_style: author_year
     html_last_updated_fmt: "%-d %B %Y"
     html_theme: sphinx_pythia_theme
     html_permalinks_icon: '<i class="fas fa-link"></i>'
